# farpostbooks_backend

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: auto-assign.yml
.github/workflows/: auto-assign.yml  tests.yml
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
etc/: dashboards.yaml
etc/dashboards/: fastapi-observability.json
etc/grafana/: datasource.yml
etc/prometheus/: prometheus.yml
farpostbooks_backend/: __init__.py  __main__.py  conftest.py  logging.py  settings.py
farpostbooks_backend/db/: config.py
farpostbooks_backend/db/dao/: book_dao.py  user_dao.py  userbook_dao.py
farpostbooks_backend/db/migrations/models/: 0_20230216071916_init.py  0_20230216175332_init.py  1_20230228004317_update.py  2_20230213140412_None.py  3_20230214143150_update.py
farpostbooks_backend/db/models/: __init__.py  book_model.py  user_model.py  userbook_model.py
farpostbooks_backend/services/: __init__.py  access_token.py  scheduler.py  search_book.py  telegram_hash.py  utils.py
farpostbooks_backend/tests/: __init__.py  test_admin.py  test_book.py  test_farpostbooks_backend.py  test_user.py  test_userbook.py
farpostbooks_backend/web/: __init__.py  application.py  lifetime.py
farpostbooks_backend/web/api/: __init__.py  enums.py  router.py  schema.py
farpostbooks_backend/web/api/admin/: __init__.py  views.py
farpostbooks_backend/web/api/book/: __init__.py  schema.py  views.py
farpostbooks_backend/web/api/monitoring/: __init__.py  views.py
farpostbooks_backend/web/api/user/: schema.py  views.py
farpostbooks_backend/web/api/userbook/: __init__.py  schema.py  views.py
